tests/ui/errors/snapshots/parse_struct_instantiation_missing_comma.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:24]
 2 │ fn test() {
 3 │   let p = Point { x: 1 y: 2 };
   ·                        ┬
   ·                        ╰── expected `,` or `}`
 4 │ }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
